fixed border-radius on the slide on safari

--- a/scss/components/pageBlog/_blogSlider.scss
+++ b/scss/components/pageBlog/_blogSlider.scss
@@ -67,6 +67,7 @@ $sliderMaxWidth: 972px;
   background-color: rgba(248, 246, 242, 1);
   overflow: hidden;
   border-radius: 16px;
+  z-index: 1;
   opacity: 0.5;
   transition: opacity 0.3s ease;
 
